--- a/src/components/widgets/widgets.scss
+++ b/src/components/widgets/widgets.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 100px 140px;
   background: #FFFFFF;
+  gap: 40px;
   &__about {
     max-width: 260px;
     min-width: 160px;
@@ -15,24 +16,9 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: -40px;
+    gap: 40px;
     @media only screen and (max-width : 1100px) {
       justify-content: flex-start;
-    }
-    @media only screen and (max-width : 900px) {
-      margin-top: 40px;
-      margin-left: 0;
-    }
-  }
-  &__widget {
-    margin-left: 40px;
-    margin-top: 40px;
-    @media only screen and (max-width : 900px) {
-      margin-left: 0;
-      margin-right: 40px;
-    }
-    @media only screen and (max-width : 375px) {
-      margin-right: 0;
     }
   }
   @media only screen and (max-width : 900px) {
