--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -45,7 +45,7 @@
   }
   @media only screen and (max-width : 1430px) {
     min-width: 100%;
-    height: fit-content;
+    height: max-content;
     flex-direction: row;
     margin-left: 0;
     justify-content: space-around;
